@@ -1,3 +1,8 @@
+2006-08-28  Paolo Carlini  <pcarlini@suse.de>
+	    Roger Sayle  <roger@eyesopen.com>
+
+	* testsuite/25_algorithms/nth_element/2.cc: New.
+
 2006-08-27  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/28830
